[package]
name = "dvaultd-rust"
version = "0.1.0"
authors = ["menem salama <menem.slama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.7"
diesel = { version = "1.4.6", features = ["postgres", "uuid", "r2d2", "chrono"] }
dotenv = "0.14.1"
chrono = { version = "0.4.9", features = ["serde"] }
r2d2 = "0.8.5"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
serde = "1.0.101"
serde_json = "1.0.40"
serde_derive = "1.0.101"
env_logger = "0.6.2"
failure = "0.1.5"
